--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "eslint-config-prettier": "^10.1.5",
+    "immer": "^10.1.1",
     "next": "14.2.29",
     "prettier": "^3.5.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
